update object page

--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -127,3 +127,6 @@
 @import "./components/object/object-conditions";
 @import "./components/object/object-card";
 @import "./components/object/object-gallery";
+@import "./components/object/object-hero";
+@import "./components/object/object-contact";
+@import "./components/object/object-services";
