--- a/src/assets/styles/components/about/about-video.scss
+++ b/src/assets/styles/components/about/about-video.scss
@@ -57,7 +57,7 @@
       left: 50%;
       top: 50%;
       transform: translate(-50%, -50%);
-      box-shadow: 0px 20px 30px 0px rgba($color: $black-550, $alpha: 0.2);
+      box-shadow: 0px 20px 30px 0px rgba($black-550, 0.2);
       stroke: transparent;
       border-radius: 50%;
       fill:  $orange-500;
