--- a/src/assets/styles/components/attractions-city/attractions-city-types.scss
+++ b/src/assets/styles/components/attractions-city/attractions-city-types.scss
@@ -104,7 +104,7 @@
         display: none;
       }
       &-drag {
-        background-color: rgba($color: $blue-700, $alpha: 0.15);
+        background-color: rgba($blue-700, 0.15);
       }
     }
     .swiper-horizontal > .swiper-scrollbar, .swiper-scrollbar.swiper-scrollbar-horizontal {
