--- a/src/assets/styles/components/contacts/contacts-feedback.scss
+++ b/src/assets/styles/components/contacts/contacts-feedback.scss
@@ -64,7 +64,7 @@
   }
 
   &__text {
-    color: rgba($color: $black-300, $alpha: 0.75);
+    color: rgba($black-300, 0.75);
     @include max-screen(tablet) {
       font-size: 14px;
       line-height: 16px;
