--- a/src/assets/styles/components/contacts/contacts-hero.scss
+++ b/src/assets/styles/components/contacts/contacts-hero.scss
@@ -112,7 +112,7 @@
       font-weight: 400;
       line-height: 16px;
       text-align: left;
-      color: rgba($color: $black-300, $alpha: 0.75);
+      color: rgba($black-300, 0.75);
     }
   }
 
