--- a/src/assets/styles/components/main/main-sanatorium.scss
+++ b/src/assets/styles/components/main/main-sanatorium.scss
@@ -44,7 +44,7 @@
   }
 
   &__tab {
-    border: 1px solid rgba($color: $blue-700, $alpha: 0.15);
+    border: 1px solid rgba($blue-700, 0.15);
     border-radius: 8px;
     transition: background-color $transition-default, border-color $transition-default;
     span {
@@ -111,7 +111,7 @@
         display: none;
       }
       &-drag {
-        background-color: rgba($color: $blue-700, $alpha: 0.15);
+        background-color: rgba($blue-700, 0.15);
       }
     }
     .swiper-horizontal > .swiper-scrollbar, .swiper-scrollbar.swiper-scrollbar-horizontal {
