--- a/src/assets/styles/components/search/search-button.scss
+++ b/src/assets/styles/components/search/search-button.scss
@@ -19,7 +19,7 @@
     line-height: 16px;
     color: $blue-500;
     padding: 7px 12px;
-    background-color: rgba($color: $orange-500, $alpha: 0.15);
+    background-color: rgba($orange-500, 0.15);
     border-radius: 4px;
     white-space: nowrap;
     cursor: pointer;
