--- a/src/assets/styles/components/search/search-keywords.scss
+++ b/src/assets/styles/components/search/search-keywords.scss
@@ -31,7 +31,7 @@
 
   &__button {
     padding: 6px 4px 6px 10px;
-    background-color: rgba($color: $blue-700, $alpha: 0.15);
+    background-color: rgba($blue-700, 0.15);
     border-radius: 4px;
     display: flex;
     align-items: center;
@@ -57,7 +57,7 @@
     @include min-screen(laptop) {
       transition: background-color $transition-default;
       &:hover {
-        background-color: rgba($color: $red-400, $alpha: 0.07);
+        background-color: rgba($red-400, 0.07);
         svg {
           stroke: $red-400;
         }
@@ -68,7 +68,7 @@
 
     }
     &-reset {
-      background-color: rgba($color: $red-400, $alpha: 0.07);
+      background-color: rgba($red-400, 0.07);
       @include max-screen(tablet-2x) {
         background-color: transparent;
         padding: 0;
