--- a/src/assets/styles/mixins/reviews-clients-card.scss
+++ b/src/assets/styles/mixins/reviews-clients-card.scss
@@ -3,11 +3,11 @@
   border-radius: 8px;
   @include max-screen(tablet) {
     padding: 24px;
-    box-shadow: 0px 1px 3px 1px rgba($color: $black-400, $alpha: 0.03);
+    box-shadow: 0px 1px 3px 1px rgba($black-400, 0.03);
   }
   @include min-screen(tablet-2x) {
     padding: 30px;
-    box-shadow: 0px 5px 20px 0px rgba($color: $black-400, $alpha: 0.02), 0px 1px 3px 1px rgba($color: $black-400, $alpha: 0.05);
+    box-shadow: 0px 5px 20px 0px rgba($black-400, 0.02), 0px 1px 3px 1px rgba($black-400, 0.05);
   }
   &__top {
     display: flex;
@@ -88,7 +88,7 @@
     font-weight: 600;
     line-height: 16px;
     color: $black-300;
-    border-bottom: 1px dashed rgba($color: $black-300, $alpha: 0.5);
+    border-bottom: 1px dashed rgba($black-300, 0.5);
     &:active {
       color: $orange-500;
       border-color: transparent;
