--- a/src/views/components/object/object-card.pug
+++ b/src/views/components/object/object-card.pug
@@ -57,5 +57,28 @@
         .object-card__item 2 большие кровати, диван, микроволновая печь, кондиционер, холодильник без наполнения, стиральная машина, два телевизора, телефон, два сейфа, чайник, посуда (тарелки, чайные кружки, бокалы, набор столовых приборов), гладильная доска и утюг, Wi-Fi, балкон.
     .object-card__line
       .object-card__left
-        .object-card__co
-      h3.object-card__subtitle 
+        h3.object-card__subtitle Без лечения (Полный пансион)
+        button.object-card__link(type="button") Описание тарифа
+      .object-card__right
+        .object-card__cost
+          .object-card__price 67 900 ₽
+          .object-card__amount за 7 ночей, 2 взрослых +1 реб.
+        button.object-card__button(type="button") Запросить бронирование
+    .object-card__line
+      .object-card__left
+        h3.object-card__subtitle С лечением ИЛИ Реабилитация после Covid-19 (Полный пансион)
+        button.object-card__link(type="button") Описание тарифа
+      .object-card__right
+        .object-card__cost
+          .object-card__price 109 830 ₽
+          .object-card__amount за 7 ночей, 2 взрослых +1 реб.
+        button.object-card__button(type="button") Запросить бронирование
+    .object-card__line
+      .object-card__left
+        h3.object-card__subtitle С лечением (Полный пансион) VIP
+        button.object-card__link(type="button") Описание тарифа
+      .object-card__right
+        .object-card__cost
+          .object-card__price 1 538 750 ₽
+          .object-card__amount за 7 ночей, 2 взрослых +1 реб.
+        button.object-card__button(type="button") Запросить бронирование
