--- a/src/views/pages/object.pug
+++ b/src/views/pages/object.pug
@@ -15,6 +15,7 @@ block content
   main
     .object
       include ../components/object/object-gallery
+      include ../components/object/object-hero
       .wrapper
         .object__wrapper
           .object__blocks
@@ -26,3 +27,5 @@ block content
         include ../components/object/object-search
         include ../components/object/object-conditions
         include ../components/object/object-card
+        include ../components/object/object-contact
+        include ../components/object/object-services
