--- a/src/assets/styles/base/global.scss
+++ b/src/assets/styles/base/global.scss
@@ -200,7 +200,7 @@ input::-webkit-inner-spin-button {
     padding: 0;
     margin-top: 30px;
     margin-left: 30px;
-    background-color: rgba($color: $white, $alpha: 0.05);
+    background-color: rgba($white, 0.05);
     border-radius: 6px;
     padding: 12px 16px;
     span {
@@ -210,9 +210,9 @@ input::-webkit-inner-spin-button {
 }
 
 .lg-toolbar .lg-icon {
-  background-color: rgba($color: $white, $alpha: 0.05);
+  background-color: rgba($white, 0.05);
   padding: 6px;
-  border-radius: 2px;
+  border-radius: 6px;
   width: 40px;
   height: 40px;
   color: $gray-400;
@@ -222,12 +222,16 @@ input::-webkit-inner-spin-button {
 .lg-prev {
   width: 40px;
   height: 40px;
-  background-color: rgba($color: $white, $alpha: 0.05);
+  background-color: rgba($white, 0.05);
   border-radius: 100px;
 }
 
+.lg-prev {
+  left: 30px;
+}
 
 .lg-next {
+  right: 30px;
   &:before {
     margin-right: -2px;
     position: absolute;
@@ -250,7 +254,9 @@ input::-webkit-inner-spin-button {
   font-weight: 600;
   line-height: 18px;
   text-align: center;
-  padding: 30px 40px;
+  padding: 20px 0;
+  max-width: 550px;
+  margin: 0 auto;
 }
 
 .lg-prev {
@@ -277,4 +283,26 @@ input::-webkit-inner-spin-button {
 .lg-outer .lg-thumb-item {
   border-radius: 2px;
   border: none;
+}
+
+.lg-outer .lg-thumb {
+  padding: 0 0 10px 10px;
+  display: flex;
+  overflow: hidden;
+}
+
+.lg-outer .lg-thumb-item {
+  min-height: 81px;
+}
+
+.lg-outer .lg-thumb-item.active {
+  position: relative;
+  &:before {
+    position: absolute;
+    content: '';
+    width: 100%;
+    height: 100%;
+    inset: 0;
+    background-color: rgba($white, 0.75);
+  }
 }
