--- a/src/assets/styles/components/about/about-map.scss
+++ b/src/assets/styles/components/about/about-map.scss
@@ -70,8 +70,8 @@
     width: 100%;
     padding: 10px 12px;
     border-radius: 4px;
-    border: 1px solid rgba($color: $blue-700, $alpha: 0.12);
-    background-color: rgba($color: $blue-700, $alpha: 0.04);
+    border: 1px solid rgba($blue-700, 0.12);
+    background-color: rgba($blue-700, 0.04);
     @include max-screen(tablet) {
       display: flex;
       justify-content: space-between;
@@ -121,7 +121,7 @@
       background-color: $white;
       border-radius: 5px;
       padding: 20px;
-      box-shadow: 0px 5px 15px 0px rgba($color: $black, $alpha: 0.1), 0px 1px 2px 0px rgba($color: $black, $alpha: 0.1);
+      box-shadow: 0px 5px 15px 0px rgba($black, 0.1), 0px 1px 2px 0px rgba($black, 0.1);
 
       opacity: 0;
       visibility: hidden;
@@ -157,7 +157,7 @@
       font-size: 16px;
       line-height: 18px;
       color: $black-300;
-      border-bottom: 1px dashed rgba($color: $black-300, $alpha: 0.35);
+      border-bottom: 1px dashed rgba($black-300, 0.35);
       transition: color $transition-default, border-color $transition-default;
       &:active {
         color: $orange-500;
