--- a/src/assets/styles/components/attractions-city/attractions-city-content.scss
+++ b/src/assets/styles/components/attractions-city/attractions-city-content.scss
@@ -81,7 +81,7 @@
     font-size: 14px;
     font-weight: 400;
     line-height: 16px;
-    color: rgba($color: $black-300, $alpha: 0.75);
+    color: rgba($black-300, 0.75);
   }
 
   &__video {
@@ -96,7 +96,7 @@
   &__link {
     display: inline-block;
     color: $gray-400;
-    border-bottom: 1px dashed rgba($color: $gray-400, $alpha: 0.5);
+    border-bottom: 1px dashed rgba($gray-400, 0.5);
     @include max-screen(tablet) {
       margin-top: 30px;
       font-size: 14px;
