--- a/src/assets/styles/components/attractions-city/attractions-city-hero.scss
+++ b/src/assets/styles/components/attractions-city/attractions-city-hero.scss
@@ -13,7 +13,7 @@
   }
 
   &__text {
-    color: rgba($color: $black-300, $alpha: 0.75);
+    color: rgba($black-300, 0.75);
     @include max-screen(tablet) {
       margin-top: 20px;
       font-size: 16px;
