--- a/src/assets/styles/components/attractions-city/attractions-city-main.scss
+++ b/src/assets/styles/components/attractions-city/attractions-city-main.scss
@@ -49,7 +49,7 @@
       inset: 0;
       width: 100%;
       height: 100%;
-      background-color: rgba($color: $black, $alpha: 0.08);
+      background-color: rgba($black, 0.08);
       z-index: -1;
       opacity: 0;
       visibility: hidden;
