--- a/src/assets/styles/components/attractions/attractions-button.scss
+++ b/src/assets/styles/components/attractions/attractions-button.scss
@@ -3,7 +3,7 @@
   height: 40px;
   border-radius: 8px 0 0 8px;
   background-color: $white;
-  box-shadow: 0px 2px 14px 0px rgba($color: $black, $alpha: 0.15);
+  box-shadow: 0px 2px 14px 0px rgba($black, 0.15);
   display: flex;
   align-items: center;
   justify-content: center;
