--- a/src/assets/styles/components/attractions/attractions-sanatorium.scss
+++ b/src/assets/styles/components/attractions/attractions-sanatorium.scss
@@ -45,7 +45,7 @@
     display: none;
     padding: 9px 16px;
     border-radius: 8px;
-    border: 1px solid rgba($color: $blue-800, $alpha: 0.25);
+    border: 1px solid rgba($blue-800, 0.25);
     @include min-screen(tablet-2x) {
       display: flex;
     }
@@ -160,7 +160,7 @@
         display: none;
       }
       &-drag {
-        background-color: rgba($color: $blue-700, $alpha: 0.15);
+        background-color: rgba($blue-700, 0.15);
       }
     }
     .swiper-horizontal > .swiper-scrollbar, .swiper-scrollbar.swiper-scrollbar-horizontal {
