--- a/src/assets/styles/components/contacts/contacts-map.scss
+++ b/src/assets/styles/components/contacts/contacts-map.scss
@@ -18,7 +18,7 @@
       padding: 10px;
       border-radius: 10px;
       background-color: $white;
-      box-shadow: 0px 10px 50px 0px rgba($color: $gray-800, $alpha: 0.15), 0px 0px 6px 0px rgba($color: $blue-900, $alpha: 0.05);
+      box-shadow: 0px 10px 50px 0px rgba($gray-800, 0.15), 0px 0px 6px 0px rgba($blue-900, 0.05);
     }
     #map-yandex-contacts {
       height: 100%;
