--- a/src/assets/styles/components/footer/footer-confirmation.scss
+++ b/src/assets/styles/components/footer/footer-confirmation.scss
@@ -141,7 +141,7 @@
       left: 0;
       width: 100%;
       height: 100%;
-      background-color: rgba($color: $black-600, $alpha: 0.5);
+      background-color: rgba($black-600, 0.5);
       z-index: -1;
       opacity: 0;
       visibility: hidden;
@@ -171,7 +171,7 @@
       padding: 18px 24px;
       display: flex;
       justify-content: space-between;
-      border-bottom: 1px solid rgba($color: $blue-700, $alpha: 0.12);
+      border-bottom: 1px solid rgba($blue-700, 0.12);
       @include min-screen(tablet-2x) {
         display: none;
       }
