--- a/src/assets/styles/components/footer/footer-partners.scss
+++ b/src/assets/styles/components/footer/footer-partners.scss
@@ -27,7 +27,7 @@
     }
     @include min-screen(tablet-2x) {
       justify-content: space-between;
-      border: 1px solid rgba($color: $blue-700, $alpha: 0.15);
+      border: 1px solid rgba($blue-700, 0.15);
       padding: 30px 40px;
       border-radius: 10px;
     }
