--- a/src/assets/styles/components/how-to-book-inner/how-to-book-inner-hero.scss
+++ b/src/assets/styles/components/how-to-book-inner/how-to-book-inner-hero.scss
@@ -19,7 +19,7 @@
     font-weight: 400;
     line-height: 24px;
     text-align: center;
-    color: rgba($color: $black-300, $alpha: 0.75);
+    color: rgba($black-300, 0.75);
     max-width: 856px;
   }
 }
