--- a/src/assets/styles/components/how-to-book-inner/how-to-book-inner-video.scss
+++ b/src/assets/styles/components/how-to-book-inner/how-to-book-inner-video.scss
@@ -14,7 +14,7 @@
     justify-content: center;
     align-items: center;
     @include max-screen(tablet) {
-      border: 1px solid rgba($color: $blue-700, $alpha: 0.15);
+      border: 1px solid rgba($blue-700, 0.15);
       border-radius: 8px;
       padding: 20px 24px;
       gap: 20px;
@@ -31,7 +31,7 @@
       width: auto;
     }
     svg {
-      box-shadow: 0px 20px 30px 0px rgba($color: $black-550, $alpha: 0.2);
+      box-shadow: 0px 20px 30px 0px rgba($black-550, 0.2);
       stroke: transparent;
       border-radius: 50%;
       fill:  $orange-500;
@@ -127,7 +127,7 @@
   &__time {
     font-weight: 500;
     color: $gray-400;
-    background-color: rgba($color: $blue-700, $alpha: 0.07);
+    background-color: rgba($blue-700, 0.07);
     border-radius: 50px;
     @include max-screen(tablet) {
       font-size: 14px;
@@ -144,7 +144,7 @@
   &__bubble {
     margin-top: 8px;
     position: relative;
-    color: rgba($color: $black-300, $alpha: 0.75);
+    color: rgba($black-300, 0.75);
     @include max-screen(tablet) {
       font-size: 12px;
       line-height: 12px;
@@ -152,7 +152,7 @@
     @include min-screen(tablet-2x) {
       background-color: $white;
       padding: 13px 16px;
-      box-shadow: 0px 4px 25px 0px rgba($color: $gray-800, $alpha: 0.12);
+      box-shadow: 0px 4px 25px 0px rgba($gray-800, 0.12);
       border-radius: 8px;
 
       font-size: 16px;
