--- a/src/assets/styles/components/how-to-book/how-to-book-popup.scss
+++ b/src/assets/styles/components/how-to-book/how-to-book-popup.scss
@@ -25,7 +25,7 @@
     align-items: center;
     justify-content: center;
     border-radius: 6px;
-    background-color: rgba($color: $black-600, $alpha: 0.25);
+    background-color: rgba($black-600, 0.25);
     cursor: pointer;
     @include max-screen(tablet) {
       top: 20px;
