--- a/src/assets/styles/components/main-rent/main-rent-abroad.scss
+++ b/src/assets/styles/components/main-rent/main-rent-abroad.scss
@@ -35,7 +35,7 @@
   }
   &__items {
     @include max-screen(tablet) {
-      border-top: 1px solid rgba($color: $blue-700, $alpha: 0.15);
+      border-top: 1px solid rgba($blue-700, 0.15);
       margin-top: 30px;
     }
     @include min-screen(tablet-2x) {
@@ -58,7 +58,7 @@
       display: flex;
       gap: 14px;
       justify-content: flex-start;
-      border-bottom: 1px solid rgba($color: $blue-700, $alpha: 0.15);
+      border-bottom: 1px solid rgba($blue-700, 0.15);
     }
     @include min-screen(tablet-2x) {
       display: flex;
@@ -118,7 +118,7 @@
       width: 60px;
       height: 60px;
       background-color: $white;
-      box-shadow: 0px 6px 6px 0px rgba($color: $blue-950, $alpha: 0.05);
+      box-shadow: 0px 6px 6px 0px rgba($blue-950, 0.05);
       border-radius: 6px;
       display: flex;
       align-items: center;
