--- a/src/assets/styles/components/main-rent/main-rent-popular.scss
+++ b/src/assets/styles/components/main-rent/main-rent-popular.scss
@@ -124,7 +124,7 @@
         height: 40px;
         border-radius: 50%;
         background-color: $white;
-        box-shadow: 0px 5px 15px 0px rgba($color: $gray-900, $alpha: 0.15), 0px 1px 4px 0px rgba($color: $blue-900, $alpha: 0.05);
+        box-shadow: 0px 5px 15px 0px rgba($gray-900, 0.15), 0px 1px 4px 0px rgba($blue-900, 0.05);
         border-radius: 50%;
         transition: background-color $transition-default;
         svg {
