--- a/src/assets/styles/components/main-rent/main-rent-resort.scss
+++ b/src/assets/styles/components/main-rent/main-rent-resort.scss
@@ -158,7 +158,7 @@
         height: 40px;
         border-radius: 50%;
         background-color: $white;
-        box-shadow: 0px 5px 15px 0px rgba($color: $gray-900, $alpha: 0.15), 0px 1px 4px 0px rgba($color: $blue-900, $alpha: 0.05);
+        box-shadow: 0px 5px 15px 0px rgba($gray-900, 0.15), 0px 1px 4px 0px rgba($blue-900, 0.05);
         border-radius: 50%;
         transition: background-color $transition-default;
         svg {
@@ -224,7 +224,7 @@
         display: none;
       }
       &-drag {
-        background-color: rgba($color: $blue-700, $alpha: 0.15);
+        background-color: rgba($blue-700, 0.15);
       }
     }
     .swiper-horizontal > .swiper-scrollbar, .swiper-scrollbar.swiper-scrollbar-horizontal {
