--- a/src/assets/styles/components/main/main-faq.scss
+++ b/src/assets/styles/components/main/main-faq.scss
@@ -40,7 +40,7 @@
       border-radius: 10px;
       min-height: 220px;
       padding: 0;
-      box-shadow: 0px 5px 10px 0px rgba($color: $blue-950, $alpha: 0.1);
+      box-shadow: 0px 5px 10px 0px rgba($blue-950, 0.1);
     }
     & > a {
       inset: 0;
@@ -186,13 +186,13 @@
         stroke: $black;
       }
       &--blue {
-        background-color: rgba($color: $blue-300, $alpha: 0.15);
+        background-color: rgba($blue-300, 0.15);
       }
       &--orange {
-        background-color: rgba($color: $orange-400, $alpha: 0.15);
+        background-color: rgba($orange-400, 0.15);
       }
       &--green {
-        background-color: rgba($color: $green-400, $alpha: 0.15);
+        background-color: rgba($green-400, 0.15);
       }
     }
     @include min-screen(laptop) {
@@ -217,13 +217,13 @@
         transition: stroke $transition-default;
       }
       &--blue {
-        background-color: rgba($color: $blue-300, $alpha: 0.15);
+        background-color: rgba($blue-300, 0.15);
       }
       &--orange {
-        background-color: rgba($color: $orange-400, $alpha: 0.15);
+        background-color: rgba($orange-400, 0.15);
       }
       &--green {
-        background-color: rgba($color: $green-400, $alpha: 0.15);
+        background-color: rgba($green-400, 0.15);
       }
       &:hover {
         background-color: $blue-500;
@@ -252,13 +252,13 @@
         stroke: $black;
       }
       &--blue {
-        background-color: rgba($color: $blue-300, $alpha: 0.15);
+        background-color: rgba($blue-300, 0.15);
       }
       &--orange {
-        background-color: rgba($color: $orange-400, $alpha: 0.15);
+        background-color: rgba($orange-400, 0.15);
       }
       &--green {
-        background-color: rgba($color: $green-400, $alpha: 0.15);
+        background-color: rgba($green-400, 0.15);
       }
       &:hover {
         background-color: $blue-500;
