--- a/src/assets/styles/components/main/main-promo.scss
+++ b/src/assets/styles/components/main/main-promo.scss
@@ -43,7 +43,7 @@
       inset: 0;
       width: 100%;
       height: 100%;
-      background-color: rgba($color: $black-600, $alpha: 0.05);
+      background-color: rgba($black-600, 0.05);
     }
     img {
       object-fit: cover;
@@ -192,7 +192,7 @@
         height: 40px;
         border-radius: 50%;
         background-color: $white;
-        box-shadow: 0px 5px 15px 0px rgba($color: $gray-900, $alpha: 0.15), 0px 1px 4px 0px rgba($color: $blue-900, $alpha: 0.05);
+        box-shadow: 0px 5px 15px 0px rgba($gray-900, 0.15), 0px 1px 4px 0px rgba($blue-900, 0.05);
         border-radius: 50%;
         transition: background-color $transition-default;
         svg {
