--- a/src/assets/styles/components/object/object-gallery.scss
+++ b/src/assets/styles/components/object/object-gallery.scss
@@ -1,21 +1,94 @@
 .object-gallery {
+  background-color: $white;
   overflow: hidden;
   padding-top: 4px;
   &__wrapper {
+    position: relative;
   }
 
   &__arrow {
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
-
-
     &:hover {
       .object-gallery__image {
         &:before {
-          background-color: rgba($color: $black-600, $alpha: 0.2);
+          background-color: rgba($black-600, 0.2);
         }
       }
+    }
+  }
+
+  &__buttons {
+    position: absolute;
+    z-index: 2;
+    right: 10px;
+    bottom: 10px;
+    display: flex;
+    gap: 10px;
+  }
+
+  &__button {
+    background-color: $white;
+    border-radius: 8px;
+    padding: 6px 16px;
+    display: flex;
+    align-items: center;
+    gap: 6px;
+    &:active {
+      p {
+        color: $orange-500;
+      }
+    }
+    @include min-screen(laptop) {
+      &:hover {
+        p {
+          color: $orange-500;
+        }
+      }
+    }
+    p {
+      font-size: 16px;
+      font-weight: 600;
+      line-height: 18px;
+      color: $black-400;
+      @include min-screen(laptop) {
+        transition: color $transition-default;
+      }
+    }
+    span {
+      font-size: 16px;
+      font-weight: 500;
+      line-height: 18px;
+      color: rgba($black-300, 0.75);
+    }
+    svg {
+      stroke: transparent;
+      fill: $red-800; 
+    }
+  }
+
+  &__image {
+    height: 100%;
+    position: relative;
+    cursor: pointer;
+    img {
+      width: 100%;
+      height: 100%;
+    }
+    &:hover {
+      &:before {
+        background-color: rgba($black-600, 0.2);
+      }
+    }
+    &:before {
+      position: absolute;
+      content: '';
+      width: 100%;
+      height: 100%;
+      inset: 0;
+      background-color: transparent;
+      transition: background-color $transition-default;
     }
   }
 
@@ -45,9 +118,9 @@
           align-items: center;
           justify-content: center;
           border-radius: 100px;
-          // background-color: rgba($color: $white, $alpha: 0.75);
+          // background-color: rgba($white, 0.75);
           background-color: $white;
-          box-shadow: 0px 5px 15px 0px rgba($color: $gray-900, $alpha: 0.15), 0px 1px 4px 0px rgba($color: $blue-900, $alpha: 0.05);
+          box-shadow: 0px 5px 15px 0px rgba($gray-900, 0.15), 0px 1px 4px 0px rgba($blue-900, 0.05);
 
           z-index: -1;
           opacity: 0;
@@ -82,30 +155,6 @@
           }
         }
       }
-    }
-  }
-
-  &__image {
-    height: 100%;
-    position: relative;
-    cursor: pointer;
-    img {
-      width: 100%;
-      height: 100%;
-    }
-    &:hover {
-      &:before {
-        background-color: rgba($color: $black-600, $alpha: 0.2);
-      }
-    }
-    &:before {
-      position: absolute;
-      content: '';
-      width: 100%;
-      height: 100%;
-      inset: 0;
-      background-color: transparent;
-      transition: background-color $transition-default;
     }
   }
 }
