--- a/src/assets/styles/components/object/object-information.scss
+++ b/src/assets/styles/components/object/object-information.scss
@@ -11,7 +11,7 @@
 
   &__container {
     padding-bottom: 24px;
-    border-bottom: 1px solid rgba($color: $blue-700, $alpha: 0.15);
+    border-bottom: 1px solid rgba($blue-700, 0.15);
     margin-bottom: 30px;
     &:last-child {
       border: none;
@@ -34,7 +34,7 @@
       color: $black-300;
     }
     a {
-      border-bottom: 1px dashed rgba($color: $black-300, $alpha: 0.5);
+      border-bottom: 1px dashed rgba($black-300, 0.5);
       &:active {
         border-color: transparent;
         color: $orange-500;
