--- a/src/assets/styles/components/object/object-sidebar.scss
+++ b/src/assets/styles/components/object/object-sidebar.scss
@@ -8,7 +8,7 @@
   &__block {
     background-color: $white;
     border-radius: 10px;
-    box-shadow: 0px 4px 25px 0px rgba($color: $gray-800, $alpha: 0.12);
+    box-shadow: 0px 4px 25px 0px rgba($gray-800, 0.12);
     padding: 24px;
     &--small {
       padding: 20px;
