--- a/src/assets/styles/components/object/object-transfer.scss
+++ b/src/assets/styles/components/object/object-transfer.scss
@@ -1,5 +1,5 @@
 .object-transfer {
-  background-color: rgba($color: $blue-700, $alpha: 0.1);
+  background-color: rgba($blue-700, 0.1);
   border-radius: 10px;
   margin-top: 30px;
   padding: 24px 30px;
