--- a/src/assets/styles/components/object/object.scss
+++ b/src/assets/styles/components/object/object.scss
@@ -20,12 +20,12 @@
       color: $blue-500;
       border-bottom: 1px dashed transparent;
       &:active {
-        border-color: rgba($color: $blue-500, $alpha: 0.5);
+        border-color: rgba($blue-500, 0.5);
       }
       @include min-screen(laptop) {
         transition: border-color $transition-default;
         &:hover {
-          border-color: rgba($color: $blue-500, $alpha: 0.5);
+          border-color: rgba($blue-500, 0.5);
         }
       }
     }
