--- a/src/assets/styles/components/reviews/reviews-clients.scss
+++ b/src/assets/styles/components/reviews/reviews-clients.scss
@@ -23,7 +23,7 @@
   &__button {
     display: flex;
     align-items: center;
-    border: 1px solid rgba($color: $blue-800, $alpha: 0.25);
+    border: 1px solid rgba($blue-800, 0.25);
     border-radius: 8px;
     max-width: max-content;
     @include max-screen(tablet) {
