--- a/src/assets/styles/components/reviews/reviews-create-popup.scss
+++ b/src/assets/styles/components/reviews/reviews-create-popup.scss
@@ -4,7 +4,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba($color: $black, $alpha: 0.08);
+  background-color: rgba($black, 0.08);
   z-index: -1;
   opacity: 0;
   visibility: hidden;
@@ -25,7 +25,7 @@
     position: absolute;
     background-color: $white;
     border-radius: 6px;
-    box-shadow: 0px 15px 45px 0px rgba($color: $black-600, $alpha: 0.25);
+    box-shadow: 0px 15px 45px 0px rgba($black-600, 0.25);
     @include max-screen(tablet) {
       inset: 0;
       width: 100%;
@@ -131,11 +131,11 @@
       box-shadow: transparent;
       transition: box-shadow $transition-default;
       &:hover {
-        box-shadow: 0px 5px 20px 0px rgba($color: $black-400, $alpha: 0.07), 0px 1px 3px 1px rgba($color: $black-400, $alpha: 0.04);
+        box-shadow: 0px 5px 20px 0px rgba($black-400, 0.07), 0px 1px 3px 1px rgba($black-400, 0.04);
       }
     }
     &:active {
-      box-shadow: 0px 5px 20px 0px rgba($color: $black-400, $alpha: 0.07), 0px 1px 3px 1px rgba($color: $black-400, $alpha: 0.04);
+      box-shadow: 0px 5px 20px 0px rgba($black-400, 0.07), 0px 1px 3px 1px rgba($black-400, 0.04);
     }
     &--small {
       @include max-screen(tablet) {
@@ -172,7 +172,7 @@
     }
     @include min-screen(tablet-2x) {
       gap: 20px;
-      border-top: 1px solid rgba($color: $blue-700, $alpha: 0.1);
+      border-top: 1px solid rgba($blue-700, 0.1);
     }
     span {
       color: $gray-400;
@@ -203,7 +203,7 @@
       border-radius: 4px;
       width: 100%;
       border: 1px solid rgba($blue-700, 0.15);
-      background-color: rgba($color: $blue-700, $alpha: 0.05);
+      background-color: rgba($blue-700, 0.05);
       outline: none;
       padding: 13px 16px;
   
@@ -231,7 +231,7 @@
       resize: none;
       width: 100%;
       border: 1px solid rgba($blue-700, 0.15);
-      background-color: rgba($color: $blue-700, $alpha: 0.05);
+      background-color: rgba($blue-700, 0.05);
       border-radius: 4px;
       padding: 13px 16px;
 
@@ -333,8 +333,8 @@
           top: 50%;
           left: 0%;
           transform: translate(0, -50%);
-          border: 1px solid rgba($color: $blue-700, $alpha: 0.15);
-          background-color: rgba($color: $blue-700, $alpha: 0.05);
+          border: 1px solid rgba($blue-700, 0.15);
+          background-color: rgba($blue-700, 0.05);
           width: 20px;
           height: 20px;
           border-radius: 3px;
