--- a/src/assets/styles/components/reviews/reviews-popup.scss
+++ b/src/assets/styles/components/reviews/reviews-popup.scss
@@ -4,7 +4,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba($color: $black, $alpha: 0.08);
+  background-color: rgba($black, 0.08);
   z-index: -1;
   opacity: 0;
   visibility: hidden;
@@ -19,7 +19,7 @@
     position: absolute;
     background-color: $white;
     border-radius: 6px;
-    box-shadow: 0px 15px 45px 0px rgba($color: $black-600, $alpha: 0.25);
+    box-shadow: 0px 15px 45px 0px rgba($black-600, 0.25);
     @include max-screen(tablet) {
       inset: 0;
       width: 100%;
@@ -42,7 +42,7 @@
     position: relative;
     display: flex;
     align-items: center;
-    border-bottom: 1px solid rgba($color: $blue-700, $alpha: 0.1);
+    border-bottom: 1px solid rgba($blue-700, 0.1);
     @include max-screen(tablet) {
       padding-bottom: 18px;
       gap: 10px;
@@ -138,7 +138,7 @@
       font-size: 16px;
       font-weight: 400;
       line-height: 24px;
-      color: rgba($color: $black-300, $alpha: 0.75);
+      color: rgba($black-300, 0.75);
     }
   }
   
@@ -180,7 +180,7 @@
     font-size: 16px;
     line-height: 16px;
     color: $gray-400;
-    border-bottom: 1px dashed rgba($color: $gray-400, $alpha: 0.5);
+    border-bottom: 1px dashed rgba($gray-400, 0.5);
     &:active {
       color: $orange-500;
       border-color: transparent;
