--- a/src/assets/styles/components/search/search-map-button.scss
+++ b/src/assets/styles/components/search/search-map-button.scss
@@ -21,7 +21,7 @@
       inset: 0;
       width: 100%;
       height: 100%;
-      background-color: rgba($color: $black-600, $alpha: 0.15);
+      background-color: rgba($black-600, 0.15);
     }
   }
 
@@ -32,7 +32,7 @@
   }
 
   &__item {
-    background-color: rgba($color: $white, $alpha: 0.75);
+    background-color: rgba($white, 0.75);
     border-radius: 8px;
 
     font-size: 16px;
