--- a/src/assets/styles/components/search/search-sorting-popup.scss
+++ b/src/assets/styles/components/search/search-sorting-popup.scss
@@ -4,7 +4,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba($color: $black-600, $alpha: 0.5);
+  background-color: rgba($black-600, 0.5);
   z-index: -1;
   opacity: 0;
   visibility: hidden;
@@ -29,7 +29,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    border: 1px solid rgba($color: $blue-700, $alpha: 0.12);
+    border: 1px solid rgba($blue-700, 0.12);
     span {
       font-family: 'Panton';
       font-size: 18px;
