--- a/src/assets/styles/components/search/search-station-popup.scss
+++ b/src/assets/styles/components/search/search-station-popup.scss
@@ -4,7 +4,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba($color: $black-600, $alpha: 0.5);
+  background-color: rgba($black-600, 0.5);
   z-index: -1;
   opacity: 0;
   visibility: hidden;
@@ -50,8 +50,8 @@
   &__field {
     width: 300px;
     min-width: 300px;
-    border: 1px solid rgba($color: $blue-700, $alpha: 0.15);
-    background-color: rgba($color: $blue-700, $alpha: 0.05);
+    border: 1px solid rgba($blue-700, 0.15);
+    background-color: rgba($blue-700, 0.05);
     border-radius: 4px;
     padding: 7px 12px;
     font-size: 16px;
@@ -66,7 +66,7 @@
     }
     &:focus {
       background-color: $white;
-      border-color: rgba($color: $blue-700, $alpha: 0.5);
+      border-color: rgba($blue-700, 0.5);
     }
   }
 
@@ -97,7 +97,7 @@
         @include min-screen(laptop) {
           transition: border-color $transition-default;
           &:hover {
-            border-color: rgba($color: $red-400, $alpha: 0.5);
+            border-color: rgba($red-400, 0.5);
           }
         }
       }
@@ -133,13 +133,13 @@
     width: 360px;
     min-width: 360px;
     padding: 7px 12px;
-    background-color: rgba($color: $blue-700, $alpha: 0.05);
-    border: 1px solid rgba($color: $blue-700, $alpha: 0.15);
+    background-color: rgba($blue-700, 0.05);
+    border: 1px solid rgba($blue-700, 0.15);
     border-radius: 4px;
     cursor: pointer;
     transition: border-color $transition-default, background-color $transition-default;
     &.active {
-      border-color: rgba($color: $blue-700, $alpha: 0.5);
+      border-color: rgba($blue-700, 0.5);
       background-color: $white;
       .search-station-popup-dropdown__arrow {
         stroke: $black-400;
@@ -174,7 +174,7 @@
       padding: 10px 7px 10px 0;
       margin: 1px 0 0 0;
       background-color: $white;
-      box-shadow: 0px 5px 15px 0px rgba($color: $black, $alpha: 0.1), 0px 1px 2px 0px rgba($color: $black, $alpha: 0.1);
+      box-shadow: 0px 5px 15px 0px rgba($black, 0.1), 0px 1px 2px 0px rgba($black, 0.1);
       z-index: -1;
       opacity: 0;
       visibility: hidden;
@@ -227,10 +227,10 @@
     padding: 6px 16px;
     transition: background-color $transition-default;
     &:hover {
-      background-color: rgba($color: $orange-700, $alpha: 0.1)
+      background-color: rgba($orange-700, 0.1)
     }
     &:active {
-      background-color: rgba($color: $orange-700, $alpha: 0.2)
+      background-color: rgba($orange-700, 0.2)
     }
   }
 
