--- a/src/assets/styles/mixins/breadcrumbs.scss
+++ b/src/assets/styles/mixins/breadcrumbs.scss
@@ -14,7 +14,7 @@
     align-items: center;
     @include max-screen(tablet) {
       gap: 4px;
-      background-color: rgba($color: $blue-700, $alpha: 0.07);
+      background-color: rgba($blue-700, 0.07);
       padding: 7px 10px;
       border-radius: 6px;
     }
@@ -22,7 +22,7 @@
       display: none;
     }
     &-white {
-      background-color: rgba($color: $white, $alpha: 0.85);
+      background-color: rgba($white, 0.85);
     }
     svg {
       fill: transparent;
