--- a/src/assets/styles/mixins/button-transparent.scss
+++ b/src/assets/styles/mixins/button-transparent.scss
@@ -1,5 +1,5 @@
 .button-transparent {
-  border: 1px solid rgba($color: $blue-800, $alpha: 0.25);
+  border: 1px solid rgba($blue-800, 0.25);
   display: flex;
   justify-content: center;
   border-radius: 8px;
