--- a/src/assets/styles/mixins/excursion-card.scss
+++ b/src/assets/styles/mixins/excursion-card.scss
@@ -3,7 +3,7 @@
   overflow: hidden;
   position: relative;
   height: 100%;
-  box-shadow: 0px 5px 20px 0px rgba($color: $black-400, $alpha: 0.03), 0px 1px 3px 1px rgba($color: $black-400, $alpha: 0.07);
+  box-shadow: 0px 5px 20px 0px rgba($black-400, 0.03), 0px 1px 3px 1px rgba($black-400, 0.07);
   
   &__content {
     display: flex;
@@ -64,7 +64,7 @@
     font-weight: 400;
     line-height: 16px;
     text-align: left;
-    color: rgba($color: $black-300, $alpha: 0.75);
+    color: rgba($black-300, 0.75);
     display: -webkit-box;
     -webkit-line-clamp: 4;
     -webkit-box-orient: vertical;
