--- a/src/assets/styles/mixins/reviews-service-rating.scss
+++ b/src/assets/styles/mixins/reviews-service-rating.scss
@@ -1,5 +1,5 @@
 .reviews-service-rating {
-  border: 1px solid rgba($color: $blue-700, $alpha: 0.15);
+  border: 1px solid rgba($blue-700, 0.15);
   position: relative;
   @include max-screen(tablet) {
     border-radius: 8px;
